@@ -3,11 +3,11 @@
 * Form control creating a simple file upload element for an object derived from IcmsPersistableObject
 *
 * @copyright	The ImpressCMS Project http://www.impresscms.org/
-* @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
-* @package		IcmsPersistableObject
-* @since		  1.1
-* @author		  marcan <marcan@impresscms.org>
-* @version		$Id$
+* @license	http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
+* @package	IcmsPersistableObject
+* @since	1.1
+* @author	marcan <marcan@impresscms.org>
+* @version	$Id$
 */
 
 if (!defined('ICMS_ROOT_PATH')) die("ImpressCMS root path not defined");
@@ -19,11 +19,10 @@ class IcmsFormUploadElement extends XoopsFormFile {
 	 * @param	object    $object   reference to targetobject (@link IcmsPersistableObject)
 	 * @param	string    $key      the form name
 	 */
-  function IcmsFormFileElement($object, $key) {
-    $this->XoopsFormFile(_CO_ICMS_UPLOAD, $key, isset($object->vars[$key]['form_maxfilesize']) ? $object->vars[$key]['form_maxfilesize'] : 0);
-    $this->setExtra(" size=50");
-  }
-
+	function IcmsFormUploadElement($object, $key) {
+		$this->XoopsFormFile($object->vars[$key]['form_caption'], $key, isset($object->vars[$key]['form_maxfilesize']) ? $object->vars[$key]['form_maxfilesize'] : 0);
+		$this->setExtra(" size=50");
+	}
 
 	/**
 	 * prepare HTML for output
@@ -36,5 +35,4 @@ class IcmsFormUploadElement extends XoopsFormFile {
 		        <input type='hidden' name='icms_upload_file[]' id='icms_upload_file[]' value='".$this->getName()."' />";
 	}
 }
-
 ?>
